--- a/VideoTransform_MiDaS.ipynb
+++ b/VideoTransform_MiDaS.ipynb
@@ -6,7 +6,7 @@
       "name": "VideoTransform_MiDaS.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM4ZsmwS8d49uMr8LnZSg5z",
+      "authorship_tag": "ABX9TyNUsRZrKvhTNbzPvvo+sAW/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -335,7 +335,7 @@
         "id": "-7q82gQKjBhV"
       },
       "source": [
-        "#dont know why this is needed but if i dont set is for every iteration it wont work\n",
+        "#dont know why this is needed but if i dont set this for every iteration, it wont work\n",
         "def setter_inew_model():\n",
         "  path1_depth = '/content/test_vid/Frames'\n",
         "  data_depth = os.listdir(path1_depth)\n",
@@ -401,7 +401,7 @@
         "  \n",
         "  setter_inew_model() \n",
         "\n",
-        "  ### not know why it needs to be defined twice but without it, it wont work\n",
+        "  ### dont know why it needs to be defined twice but without it, it wont work\n",
         "  path1_depth = '/content/test_vid/Frames'\n",
         "  data_depth = os.listdir(path1_depth)\n",
         "  ordedered_list = sorted(data_depth)\n",
