--- a/VideoTransform_MiDaS.ipynb
+++ b/VideoTransform_MiDaS.ipynb
@@ -6,7 +6,7 @@
       "name": "VideoTransform_MiDaS.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUsRZrKvhTNbzPvvo+sAW/",
+      "authorship_tag": "ABX9TyMes95+3ojl7JK3+uzCV2TV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -521,7 +521,7 @@
         "id": "2_ImWgQh3i6F"
       },
       "source": [
-        "#zero padding \n",
+        "##zero padding every image name in folder to get the right order\n",
         "import shutil\n",
         "import os\n",
         "\n",
